--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.0.0",
+    "@angular/cdk": "^19.0.5",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
     "@angular/forms": "^19.0.0",
+    "@angular/material": "^19.0.5",
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "ngx-papaparse": "^6.0.2",
     "papaparse": "^5.5.1",
     "rxjs": "~7.8.0",
